css/custom.css
/* ... */
@media only screen and (min-width: 1020px) {
  .group-icon-box-list-side-image .__block-wrapper-2 .__block {
    width: 960px;
  }
}
@media only screen and (min-width: 1230px) {
  .group-icon-box-list-side-image .__block-wrapper-1,
  .group-icon-box-list-side-image .__block-wrapper-2 {
    width: 50%;
  }
  .group-icon-box-list-side-image .__block-wrapper-2 {
    padding-right: 30px;
    padding-left: 30px;
    float: right;
  }
  .group-icon-box-list-side-image .__block-wrapper-2 .__block {
    max-width: 700px;
  }
  .group-icon-box-list-side-image .__block-wrapper-1 {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
  }
}
@media only screen and (max-width: 1229px) {
  .group-icon-box-list-side-image .__block-wrapper-1 {
    position: relative;
    min-height: 500px;
  }
}

.static-background {
  background-position: 50% 50%;
  background-size: cover;
  height: 100%;
  left: 0;
  position: absolute;
  top: 0;
  width: 100%;
  z-index: -2;
}

.black {
  color: black;
}

.loader {
  display: none;
  position: fixed;
  z-index: 1000;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  background: rgba(255, 255, 255, 0.8) url(../images/Gif_Kameo.gif) 50% 50%
    no-repeat;
}

/* When the body has the loading class, we turn
   the scrollbar off with overflow:hidden */
body.loading .loader {
  overflow: hidden;
}

/* Anytime the body has the loading class, our
   modal element will be visible */
body.loading .loader {
  display: block;
}

/* consent bar */
.consent-bar {
  visibility: hidden;
  opacity: 0;
  position: fixed;
  left: 0;
  right: 0;
  padding-left: 20px;
  padding-top: 30px;
  padding-bottom: 30px;
  background-color: black;
  box-shadow: 0 -2px 15px RGBA(0, 0, 0, 0.4);
  color: white;
  z-index: 999;
}

.consent-bar.active {
  transition: opacity 0.5s linear;
  visibility: visible;
  opacity: 0.8;
  bottom: 0;
}

.cookie-btn {
  margin-left: 10px;
}

/* Jumbotron redirection tb-vélo-electrique */
.jumbotron-redirection-tb {
  background-color: #f6e948;
  margin-bottom: 0;
  position: relative;
}

.jumbotron-redirection-tb h3,
.jumbotron-redirection-tb h4 {
  color: black !important;
}

.jumbotron-redirection-tb h3::selection,
.jumbotron-redirection-tb h4::selection,
.jumbotron-redirection-tb a span::selection {
  background-color: black;
  color: #f6e948;
}

.jumbotron-redirection-tb .tb-content {
  position: absolute;
  margin-left: auto;
  margin-right: auto;
  left: 0;
  right: 0;
  text-align: center;
}

.jumbotron-redirection-tb img {
  width: 150px;
  margin-left: 40%;
}

.background-orange {
  background-color: #f99367 !important;
}

.background-green {
  background-color: #3cb395 !important;
}

/* Modernizr Webp Images */
.webp .bg_fond_site_black {
  background: url("/images/Fond_Site_Black.webp");
}

.no-webp .bg_fond_site_black {
  background: url("/images/Fond_Site_Black.jpg");
}

.webp .bg_new {
  background: url("/images/background_new.webp");
  background-size: 100%;
}

.no-webp .bg_new {
  background: url("/images/background_new.jpg");
}

.webp .fond_degrade2 {
  background: url("/images/fond_degrade2.webp");
  background-size: 100%;
}

.no-webp .fond_degrade2 {
  background: url("/images/fond_degrade2.jpg");
}

/* Search Bar Scroll Fixed on catalog*/

#achat_sidebar {
  transition: transform 200ms top;
  width: 280px;
  height: 530px;
}

#achat_sidebar.scroll {
  top: 0;
  position: fixed;
}

#promo-btn-block {
  padding: 0;
  width: 280px;
}

/* go to top button on catalog */
#btn_goto_top_catalog {
  visibility: hidden;
  opacity: 0;
  position: fixed;
  bottom: 20px;
  right: 20px;
  z-index: 999;
  border: none;
  outline: none;
  color: white;
  background-color: #3cb395;
  cursor: pointer;
  padding: 0;
  font-size: 30px;
  text-align: center;
  border-radius: 50%;
  height: 40px;
  width: 40px;
}

#btn_goto_top_catalog.active {
  transition: opacity 0.5s linear;
  visibility: visible;
  opacity: 1;
}

#btn_goto_top_catalog:hover {
  opacity: 80%;
  transition: 400ms;
}

/* catalogue popup tb */
.tb-popup {
  visibility: hidden;
  opacity: 0;
  position: fixed;
  bottom: 20px;
  right: 80px;
  z-index: 999;
}

.tb-popup h3::selection,
.tb-popup p::selection {
  background-color: yellow;
  color: black !important;
}

.tb-popup span::selection {
  background-color: black;
  color: #f6e948;
}

.tb-popup.active {
  visibility: visible;
  opacity: 1;
  transition: 1s;
}

.tb-popup .popup-head {
  background-color: #f6e948;
  padding-top: 5px;
  border-top-right-radius: 15px;
  border-top-left-radius: 15px;
}

.tb-popup .popup-head #popup-closeBtn {
  right: 8px;
  top: 8px;
  position: absolute;
  cursor: pointer;
  border-radius: 50%;
  font-size: 34px;
}

.tb-popup .popup-head #popup-closeBtn:hover {
  transform: scale(1.1);
  transition: 300ms;
}

.tb-popup .popup-body {
  background-color: #0c0c0c;
  padding: 5%;
  border-bottom-right-radius: 15px;
  border-bottom-left-radius: 15px;
}

.tb-popup .popup-body h3 {
  color: white;
  text-align: center;
}

.tb-popup .popup-body p {
  color: white;
  text-align: justify;
}

